<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".GuestSignup">

    <ImageView
        android:id="@+id/appProfile"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        app:srcCompat="@drawable/ic_avator" />

    <TextView
        android:id="@+id/tvAppname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appProfile"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvregisterHotel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvAppname"
        android:gravity="center"
        android:text="@string/guestReg"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp" />


    <LinearLayout
        android:id="@+id/layoutloc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvregisterHotel"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/blankfield"
        android:padding="10dp"
        android:weightSum="5">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_name" />

        <EditText
            android:id="@+id/edtGuestName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_weight="4"
            android:background="@drawable/blankfield"
            android:hint="@string/Name"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutownerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutloc"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/blankfield"
        android:padding="10dp"
        android:weightSum="5">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_mail" />

        <EditText
            android:id="@+id/edtguestmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_weight="4"
            android:background="@drawable/blankfield"
            android:hint="@string/Mail"
            android:inputType="textEmailAddress" />
    </LinearLayout>



    <LinearLayout
        android:id="@+id/layoutguestpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutownerName"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/blankfield"
        android:padding="10dp"
        android:weightSum="5">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_password" />

        <EditText
            android:id="@+id/edtguestpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_weight="4"
            android:background="@drawable/blankfield"
            android:hint="@string/passwd"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/btnRegisterguestAuth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutguestpass"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/blankbutton"
        android:padding="10dp"
        android:text="@string/Register"
        android:textColor="@color/colorWhite" />

    <Button
        android:id="@+id/btnLoginguestAuth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnRegisterguestAuth"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:background="@color/colorTransparent"
        android:text="@string/login"

        android:textColor="@color/colorPrimary" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnRegisterguestAuth"
        android:layout_marginTop="29dp"
        android:layout_marginRight="1dp"
        android:layout_toLeftOf="@+id/btnLoginguestAuth"
        android:text="@string/haveAccount"
        android:textSize="16sp" />

</RelativeLayout>