<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:id="@+id/allRoomsGV"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="95dp"
                android:id="@+id/imgAllroomgv"
                android:layout_margin="10dp"
                android:src="@drawable/roomsample" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/romNoallroomGV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/roomnumber"

                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/hotelnamAllromGV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/romNoallroomGV"
                    android:layout_marginTop="5dp"
                    android:text="@string/menu_hotel"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/inuseratingsGV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:text="@string/ratings"
                    android:textColor="@color/colorBlack" />

                <TextView
                    android:id="@+id/allroomDurationGV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/hotelnamAllromGV"
                    android:layout_marginTop="5dp"
                    android:text="@string/nights"
                    android:textColor="@color/colorAccent"
                    android:textSize="14sp" />
            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>